--- a/app/page.module.css
+++ b/app/page.module.css
@@ -14,6 +14,7 @@
   padding: 80px;
   gap: 64px;
   font-family: var(--font-geist-sans);
+  overflow: auto;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -168,7 +169,7 @@ a.secondary {
 }
 
 .tableRow:hover {
-  background-color: lightgreen;
+  background-color: green;
   cursor: pointer;
 }
 
@@ -179,7 +180,7 @@ a.secondary {
 .leaf:before {
   content: "";
   z-index: 1;
-  background-color: lightgreen;
+  background-color: green;
   width: 100vw;
   height: 1px;
   position: absolute;
